[package]
name = "mcfit-presence-plot"
version = "0.1.0"
authors = ["Daniela Brozzoni <danielabrozzoni@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl="0.4.30"
html2text="0.1.13"
regex="1.3.9"
tokio = { version = "0.2", features = ["full"] }
chrono="0.4.13"
